[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/anima/nodes/AnimaAnimationControl.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/ui/windows/AnimationsWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/anima/ui/windows/AnimaPropertiesWindow.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/anima/fonts/Lato-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://addons/anima/ui/AnimaAnimationData.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/anima/ui/windows/AnimaEasingsWindow.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/anima/ui/property/AnimaPropertyFromTo.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 18
use_filter = true
font_data = ExtResource( 4 )

[node name="AnimationControl" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = -0.0725437
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeData" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1008.0
margin_bottom = 122.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TimeData"]
margin_right = 1008.0
margin_bottom = 4.0

[node name="Label3" type="Label" parent="VBoxContainer/TimeData"]
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
custom_fonts/font = SubResource( 1 )
text = "Time:"
align = 1

[node name="GridContainer2" type="GridContainer" parent="VBoxContainer/TimeData"]
margin_top = 34.0
margin_right = 1008.0
margin_bottom = 122.0
custom_constants/vseparation = 8
custom_constants/hseparation = 12
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/TimeData/GridContainer2"]
margin_top = 9.0
margin_right = 120.0
margin_bottom = 31.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 1 )
text = "duration (s):"

[node name="Duration" parent="VBoxContainer/TimeData/GridContainer2" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_left = 132.0
margin_right = 1008.0
margin_bottom = 40.0
label = "parent value"
type = 3
show_relative_selector = false

[node name="Label2" type="Label" parent="VBoxContainer/TimeData/GridContainer2"]
margin_top = 57.0
margin_right = 120.0
margin_bottom = 79.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 1 )
text = "delay (s):"

[node name="Delay" parent="VBoxContainer/TimeData/GridContainer2" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_left = 132.0
margin_top = 48.0
margin_right = 1008.0
margin_bottom = 88.0
label = "parent value"
type = 3
show_relative_selector = false

[node name="AnimationData" parent="VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 126.0
margin_right = 1008.0
margin_bottom = 240.0

[node name="PropertiesWindow" parent="." instance=ExtResource( 3 )]

[node name="AnimationsWindow" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )
rect_pivot_offset = Vector2( 504, 292 )

[node name="AnimaEasingsWindow" parent="." instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0
rect_pivot_offset = Vector2( 504, 292 )

[connection signal="vale_updated" from="VBoxContainer/TimeData/GridContainer2/Duration" to="." method="_on_Duration_vale_updated"]
[connection signal="vale_updated" from="VBoxContainer/TimeData/GridContainer2/Delay" to="." method="_on_Delay_vale_updated"]
[connection signal="content_size_changed" from="VBoxContainer/AnimationData" to="." method="_on_AnimationData_content_size_changed"]
[connection signal="select_animation" from="VBoxContainer/AnimationData" to="." method="_on_AnimationData_select_animation"]
[connection signal="select_easing" from="VBoxContainer/AnimationData" to="." method="_on_AnimationData_select_easing"]
[connection signal="select_property" from="VBoxContainer/AnimationData" to="." method="_on_AnimationData_select_property"]
[connection signal="select_relative_property" from="VBoxContainer/AnimationData" to="." method="_on_AnimationData_select_relative_property"]
[connection signal="value_updated" from="VBoxContainer/AnimationData" to="." method="_on_AnimationData_value_updated"]
[connection signal="property_selected" from="PropertiesWindow" to="." method="_on_PropertiesWindow_property_selected"]
[connection signal="animation_selected" from="AnimationsWindow" to="." method="_on_AnimationsWindow_animation_selected"]
[connection signal="easing_selected" from="AnimaEasingsWindow" to="." method="_on_AnimaEasingsWindow_easing_selected"]
